@@ -24,6 +24,7 @@ namespace Ex
 
 ICE_API void throwUOE(const ::std::string&, const ::std::string&);
 ICE_API void throwMemoryLimitException(const char*, int, size_t, size_t);
+ICE_API void throwMarshalException(const char*, int, const std::string&);
 
 }
 
