@@ -27,23 +27,8 @@ namespace Ice
 {
 
 class AMD_Object_ice_invoke;
-class AMD_Array_Object_ice_invoke;
-
-}
-
-namespace IceInternal
-{
-
 ICE_API IceUtil::Shared* upCast(::Ice::AMD_Object_ice_invoke*);
-ICE_API IceUtil::Shared* upCast(::Ice::AMD_Array_Object_ice_invoke*);
-
-}
-
-namespace Ice
-{
-
 typedef IceInternal::Handle<AMD_Object_ice_invoke> AMD_Object_ice_invokePtr;
-typedef IceInternal::Handle<AMD_Array_Object_ice_invoke> AMD_Array_Object_ice_invokePtr;
 
 }
 
