@@ -18,22 +18,11 @@ namespace Ice
 {
 
 class InputStream;
-class OutputStream;
-
-}
-
-namespace IceInternal
-{
-
 ICE_API IceUtil::Shared* upCast(::Ice::InputStream*);
-ICE_API IceUtil::Shared* upCast(::Ice::OutputStream*);
-
-}
-
-namespace Ice
-{
-
 typedef IceInternal::Handle< InputStream > InputStreamPtr;
+
+class OutputStream;
+ICE_API IceUtil::Shared* upCast(::Ice::OutputStream*);
 typedef IceInternal::Handle< OutputStream > OutputStreamPtr;
 
 }
